# poetry-codeartifact-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tag.yml
poetry_codeartifact_plugin/: plugin.py
